codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup_disabled.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Personality
  Choose a communication style for future responses.
  Current model (gpt-5.1-codex-max) doesn't support personalities. Try /model

› 1. Friendly   Warm, collaborative, and helpful.
  2. Pragmatic  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
