codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_clean_context_selected.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

› 1. Yes, clean context and implement  Start fresh session with only the plan.
  2. Yes, implement this plan          Switch to Default and start coding.
  3. No, stay in Plan mode             Continue planning with the model.

  Press enter to confirm or esc to go back
